# HighResCanopyHeight

./: .gitignore  README_chris.md  README_paper.md  inference.py  inference2.py  inference_backup.py  pyproject.toml  qgisproject_exploration.qgz  requirements.txt
output_inference_from_colab/: metrics.pt
