[tool.poetry]
package-mode = false # If you only want to manage dependencies and not develop new package

name = "highrestcanopyheight"
version = "0.1.0"
description = ""
authors = ["Chris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jupyterlab = "^4.2.0"
matplotlib = "^3.9.0"
psycopg2-binary = "^2.9.9"
pytorch-lightning = "1.7.0"
torchmetrics = "0.11.4"
torchvision = "0.18.0"
rasterio = "^1.3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.3.0"
torchtext = "0.18.0"
