[tool.poetry]
package-mode = false # If you only want to manage dependencies and not develop new package

name = "highrestcanopyheight"
version = "0.1.0"
description = ""
authors = ["Chris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.0"
matplotlib = "^3.9.0"
rasterio = "^1.3.10"
geopandas = "^0.14.4"
pytorch-lightning = "1.7"
torchmetrics = "0.11.4"
torchtext = "^0.18.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
black = "^24.4.2"
